--- a/test/Makefile
+++ b/test/Makefile
@@ -16,6 +16,7 @@ test::
 	-(cd rism3d/2igd && ./Run.2igd.pme)
 	-(cd xray/2wcu && ./Run.2wcu)
 	-(cd xray/3onk && ./Run.3onk_ml)
+	-(cd xray/480d && ./Run.480d_xray)
 	-(cd cryoem/3j9d && ./Run.3j9d)
 
 clean::
