update test cases in preparation to port to xray3

--- a/test/Makefile
+++ b/test/Makefile
@@ -14,8 +14,10 @@ test::
 	-(cd qmmm2/crambin_PM6 && ./Run.crambin_md)
 	-(cd rism3d/4lzt && ./Run.4lzt.pme)
 	-(cd rism3d/2igd && ./Run.2igd.pme)
+	-(cd xray/480d && ./Run.480d_pse2)
 	-(cd xray/2wcu && ./Run.2wcu)
 	-(cd xray/3onk && ./Run.3onk_ml)
+	-(cd xray/3onk && ./Run.3onk_mlopt)
 	-(cd xray/480d && ./Run.480d_xray)
 	-(cd cryoem/3j9d && ./Run.3j9d)
 
