break tests into parts

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,4 +1,6 @@
-test::
+test: test.general test.rism test.xray
+
+test.general:
 	-(cd dhfr && ./Run.dhfr)
 	-(cd dhfr && ./Run.dhfr.xmin)
 	-(cd gb8_trx && ./Run.trxox)
@@ -11,9 +13,13 @@ test::
 	-(cd softcore && ./Run_sc)
 	-(cd qmmm2/crambin_PM6 && ./Run.crambin)
 	-(cd qmmm2/crambin_PM6 && ./Run.crambin_md)
+
+test.rism:
 	-(cd rism3d/4lzt && ./Run.4lzt.pme)
 	-(cd rism3d/2igd && ./Run.2igd.pme)
 	-(cd xray/480d && ./Run.480d_pse2)
+
+test.xray:
 	-(cd xray/2wcu && ./Run.2wcu)
 	-(cd xray/3onk && ./Run.3onk_ml)
 	-(cd xray/3onk && ./Run.3onk_mlopt)
